syntax = "proto3";

package ww;

option go_package = "proto";

service WW{
  rpc Hello(HelloRequest)returns (HelloResponse);
  rpc State(StateRequest)returns (stream StateResponse);
  rpc Vote(VoteRequest)returns (VoteResponse);
  rpc Bite(BiteRequest)returns (BiteResponse);
  rpc Protect(ProtectRequest)returns (ProtectResponse);
  rpc Tell(TellRequest)returns (TellResponse);
  rpc Sleep(SleepRequest)returns (SleepResponse);
  rpc Dead(DeadRequest)returns (DeadResponse);
  rpc Restart(RestartRequest)returns (RestartResponse);
}

enum Camp{
  GOOD = 0;
  EVIL = 1;
}

enum Kind{
  CITIZEN = 0;
  WAREWOLF = 1;
  TELLER = 2;
  KNIGHT = 3;
}

enum State{
  BEFORE = 0;
  MORNING = 1;
  NIGHT = 2;
  AFTER = 3;
}

message HelloRequest{
  string name = 1;
}

message HelloResponse{
  int32 id = 1;
  string uuid = 2;
  string name = 3;
  Kind kind = 4;
}

message StateRequest{
  string uuid = 1;
}

message StateResponse{
  State state = 1;
  repeated Player players = 2;
}

message VoteRequest{
  string src_uuid = 1;
  int32 dst_id = 2;
}

message VoteResponse{
}

message BiteRequest{
  string src_uuid = 1;
  int32 dst_id = 2;
}

message BiteResponse{
}

message ProtectRequest{
  string src_uuid = 1;
  int32 dst_id = 2;
}

message ProtectResponse{
}

message TellRequest{
  string src_uuid = 1;
  int32 dst_id = 2;
}

message TellResponse{
  Camp camp = 1;
}

message SleepRequest{
  string src_uuid = 1;
}

message SleepResponse{
}

message DeadRequest{
  string src_uuid = 1;
}

message DeadResponse{
}

message RestartRequest{
  string src_uuid = 1;
  bool is_restart = 2;
}

message RestartResponse{
}

message Player{
  int32 id = 1;
  Kind kind = 2;
  Camp camp = 3;
  bool is_dead = 4;
  string name = 5;
}
